fix modal dark mode

--- a/src/app/home/components/modal/modal.component.scss
+++ b/src/app/home/components/modal/modal.component.scss
@@ -1,14 +1,15 @@
 .modal-wrapper {
   width: 90%;
   margin: 15% auto;
-  background-color: white;
   border-radius: 10px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-warning-icon {
-  display: block;
-  margin: 0 auto;
   color: red;
   font-size: 48px;
   text-align: center;
@@ -29,9 +30,4 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
-}
-
-.modal-background {
-  --background: var(--ion-color-dark);
-  --color: var(--ion-color-light);
 }
